# handwritten-digit-recognition

./: .gitignore  README.md  handwritten-digit.keras  main.py  pyproject.toml  requirements.txt
templates/: index.html
