[project]
name = "handwritten-digit-recognition"
version = "0.1.0"
description = "This is my first project on handwritten-digit recognition using neural nets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "tensorflow>=2.19.0",
    "pillow>=11.0.0",]
